[package]
name = "logsnag"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A logsnag API wrapper"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.166", features = ["derive"]}
serde_json = "1.0"
anyhow = { version = "1.0.71", default-features = true }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"]}
