[package]
name = "logsnag"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "A logsnag API wrapper"
readme = "README.md"
repository = "https://github.com/rhh4x0r/logsnag-rust/"
authors = ["rhh4x0r <rhh4x0r@qhsecure.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.166", features = ["derive"]}
serde_json = "1.0"
anyhow = { version = "1.0.71", default-features = true }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"]}
lazy-regex = "3.0.0"

[dev-dependencies]
dotenv = "0.15.0"